--- a/localisation/english/FX_Portugese_Republic_l_english.yml
+++ b/localisation/english/FX_Portugese_Republic_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
 
 ### Country Names
-PRR_vanguardist: "Portuguese Socialist Republic"
+PRR_vanguardist: "African National Union"
 PRR_vanguardist_ADJ: "Portuguese"
-PRR_vanguardist_DEF: "The Socialist Republic of Portugal"
+PRR_vanguardist_DEF: "The African National Union"
 PRR_collectivist: "Portuguese Socialist Republic"
 PRR_collectivist_ADJ: "Portuguese"
-PRR_collectivist_DEF: "The Socialist Republic of Portugal"
+PRR_collectivist_DEF: "The African National Union"
 PRR_libertarian_socialist: "Socialist Republic of Portugal"
 PRR_libertarian_socialist_ADJ: "Portuguese"
 PRR_libertarian_socialist_DEF: "The Socialist Republic of Portugal"
@@ -14,11 +14,11 @@ PRR_social_democrat: "Portuguese Republic"
 PRR_social_democrat_ADJ: "Portuguese"
 PRR_social_democrat_DEF: "The Portuguese Republic"
 PRR_social_liberal: "Portuguese Republic"
-PRR_social_liberal_ADJ: "Portuguese"
+PRR_social_liberal_ADJ: "African"
 PRR_social_liberal_DEF: "The Portuguese Republic"
-PRR_market_liberal: "Portuguese Republic"
-PRR_market_liberal_ADJ: "Portuguese"
-PRR_market_liberal_DEF: "The Portuguese Republic"
+PRR_market_liberal: "African National Union"
+PRR_market_liberal_ADJ: "Africans"
+PRR_market_liberal_DEF: "The African National Union"
 PRR_social_conservative: "Portuguese Republic"
 PRR_social_conservative_ADJ: "Portuguese"
 PRR_social_conservative_DEF: "The Portuguese Republic"
