--- a/localisation/english/IC_Kiel_Zone_l_english.yml
+++ b/localisation/english/IC_Kiel_Zone_l_english.yml
@@ -159,6 +159,57 @@ SHO_Breakin_The_Scythes: "Breakin The Scythes"
 SHO_Breakin_The_Scythes_desc: "It is time for the Marxist threat to be handled once and for all. Everyone of them will be dragged out of their houses and properly "taught". We didn't want to do this but they left us no choice"
 SHO_Flee_For_The_Rhine: "Flee For The Rhine"
 SHO_Flee_For_The_Rhine_desc: "The situation is only getting worse by the day. It's time to get out of here with the men we have left. May we fight another day, for one day, we'll fulfill our destiny."
+
+###Chaos Expansion
+SHO_The_Commune_of_Hamburg: "The Commune Of Hamburg"
+SHO_The_Commune_of_Hamburg_desc: ""
+SHO_Flames_of_The_Revolution: "Flames of The Revolution"
+SHO_Flames_of_The_Revolution_desc: ""
+SHO_Seizure_Of_Danish_Treasurey: "Seizure Of Danish Treasury"
+SHO_Seizure_Of_Danish_Treasurey_desc: ""
+SHO_A_Parade_In_Denmark: "A Parade In Denmark"
+SHO_A_Parade_In_Denmark_desc: ""
+SHO_Distribution_of_Wealth: "Distrubution Of Wealth"
+SHO_Distribution_of_Wealth_desc: ""
+SHO_The_North_Star: "The North Star"
+SHO_The_North_Star_desc: ""
+
+
+###Communist Expansion
+SHO_The_Red_Skies: "The Red Skies"
+SHO_The_Red_Skies_desc: ""
+SHO_Spreading_The_Revolution: "Spreading The Revolution"
+SHO_Spreading_The_Revolution_desc: ""
+SHO_Swacking_The_Swedes: "Swacking The Swedes"
+SHO_Swacking_The_Swedes_desc: ""
+SHO_International_Revolutionarys: "International Revolutionaries"
+SHO_International_Revolutionarys_desc: ""
+SHO_The_Push_To_The_Alantic: "The Push To The Atlantic"
+SHO_The_Push_To_The_Alantic_desc: ""
+SHO_Splitting_The_Fins: "Splitting The Fins"
+SHO_Splitting_The_Fins_desc: ""
+SHO_Assisting_Spain: "Assisting Spain"
+SHO_Assisting_Spain_desc: ""
+SHO_Joining_The_International: "Joining The International"
+SHO_Joining_The_International_desc: ""
+SHO_A_Red_Nordic_State: "A Red Nordic State"
+SHO_A_Red_Nordic_State_desc: ""
+SHO_Share_Our_Research: "Share Our Research"
+SHO_Share_Our_Research_desc: ""
+SHO_A_Red_Wave: "A Red Wave"
+SHO_A_Red_Wave_desc: ""
+SHO_In_Exile_No_More: "In Exile No More!"
+SHO_In_Exile_No_More_desc: ""
+SHO_The_Workers_of_Austria: "The Workers Of Austria"
+SHO_The_Workers_of_Austria_desc: ""
+SHO_Holding_Plebiscites: "Holding Plebiscites"
+SHO_Holding_Plebiscites_desc: ""
+SHO_The_2nd_Paris_Commune: "The 2nd Paris Commune"
+SHO_The_2nd_Paris_Commune_desc: ""
+SHO_European_Revolution_Achieved: "European Revolution Achieved"
+SHO_European_Revolution_Achieved_desc: ""
+
+
 ###IDEAS
 SHO_German_Imposter: "German Imposter"
 SHO_Profits_From_The_Raids: "Profits From The Raids"
@@ -182,6 +233,16 @@ SHO_Mass_Hysteria: "Mass Hysteria"
 SHO_Breakin_Jaws: "Breakin Jaws"
 SHO_Kiel_FK_Remnants: "Kiel FK Remnants"
 SHO_Fleeing_The_Rubble: "Fleeing The Rubble"
+SHO_Revolutionary_Flames: "Revolutionary Flames"
+SHO_Treasury_Seized: "Treasury Seized"
+SHO_Wealth_Distribution: "Wealth Distribution"
+SHO_North_Star: "North Star"
+SHO_Revolutionary_Volunteers: "Revolutionary Volunteers"
+SHO_International_Volunteers: "International Volunteers"
+SHO_Technology_Sharing: "Technology Sharing"
+SHO_Collectivist_Vanguard: "The Collectivist Vanguard"
+
+
 ###events
 shodec.1.t: "The capture of Stockholm"
 shodec.1.d: "The Swedes have been pushed from the major population centers. This should be enough to get a conditional surrender from them. Alternatively, we can continue north for the highly valuable resources."
@@ -278,8 +339,75 @@ shofrei.26.t: "Left to die"
 shofrei.26.d: "Those French lapdogs have left us stranded. We are surely done for... only a miracle can save us now."
 shofrei.26.a: "No one's around to help....\nThe day grows darker......Please someone....."
 kielhell.1.d: "And thus the true path shall appear\nWhat do ya think\nJust once id like to find a place with warm water ya know\nAnother locked door..\nCAR!"
-#### Political Parties ####
+##Commune
+shocommune.1.t: "The Kiel Commune Wants Our Lands!"
+shocommune.1.d: "The Kiel Commune requests the complete submission of our government and transferal of lands to join "
+shocommune.1.a: "We submit peacefully"
+shocommune.1.b: "To Arms! Over our cold dead bodies."
+shocommune.2.t: "Norway Accepts"
+shocommune.2.d: ""
+shocommune.2.a: "Ok"
+shocommune.3.t: "Norway Denies"
+shocommune.3.d: ""
+shocommune.3.a: "Ok"
+shocommune.4.t: "Kiel Commune Requests Partitioning of Finland"
+shocommune.4.d: ""
+shocommune.4.a: "It shall be partioned."
+shocommune.4.b: "We reject their proposal"
+shocommune.5.t: "Partioned"
+shocommune.5.d: ""
+shocommune.5.a: "Ok"
+shocommune.6.t: "Denied"
+shocommune.6.d: ""
+shocommune.6.a: "Ok"
+shocommune.7.t: "Kiel Requests To Join The International"
+shocommune.7.d: ""
+shocommune.7.a: "Accept them with open arms"
+shocommune.7.b: "We reject their request"
+shocommune.8.t: "Soviets Accept The Kiel Zone Into The International"
+shocommune.8.d: ""
+shocommune.8.a: "Stronger together!"
+shocommune.9.t: "Soviets Reject The Kiel Zone"
+shocommune.9.d: ""
+shocommune.9.a: "Oh well..."
+shocommune.10.t: "Supplying Spain"
+shocommune.10.d: ""
+shocommune.10.a: "We will provide them with it"
+shocommune.10.b: "They are a waste of time"
+shocommune.11.t: "Military Aid from Kiel"
+shocommune.11.d: ""
+shocommune.11.a: "We are happy to have such generous friends"
+shocommune.12.t: "Kiel Zone sends nothing"
+shocommune.12.d: ""
+shocommune.12.a: "What a shame"
+shocommune.13.t: "Relocate Capital"
+shocommune.13.d: ""
+shocommune.13.a: "Berlin"
+shocommune.13.b: "Kiel"
+shocommune.13.c: "Munich"
+shocommune.14.t: "Workers of Austria"
+shocommune.14.d: ""
+shocommune.14.a: "Yes"
+shocommune.14.b: "No"
+shocommune.15.t: "Austria accepts"
+shocommune.15.d: ""
+shocommune.15.a: "Ok"
+shocommune.16.t: "Austria rejects"
+shocommune.16.d: ""
+shocommune.16.a: "Ok"
+shocommune.17.t: "Czech Plebiscite"
+shocommune.17.d: ""
+shocommune.17.a: "Yes"
+shocommune.17.b: "No"
+shocommune.18.t: "Czech Plebiscite Accepted"
+shocommune.18.d: ""
+shocommune.18.a: "Ok"
+shocommune.19.t: "Czech Plebiscite Rejected"
+shocommune.19.d: ""
+shocommune.19.a: "Ok"
 
+
+#### Political Parties ####
 SHO_vanguardist_party: "KNP"
 SHO_vanguardist_party_long: "Kollektivistische-Nationalistische Partei"
 SHO_collectivist_party: "KAP"
@@ -372,5 +500,7 @@ SHO_Peace_and_Vengeance: "Peace and Vengeance"
 SHO_Peace_and_Vengeance_desc: "We've established occupation of the Jutland penisula, it's time to assert the superiority of the Hamburg Commune over the Danish oppressors!"
 
 FreiKorpsVictory: "The §YFrei Korps§! have seized control"
+CommuneProspers: "The §YCommune§! prospers above the opposition!"
 WilhelmReturns: "§YWilhelm II§! have arrived in the [Root.GetName]"
 MassHysteria: "There is chaos that engulfs the §Y[Root.GetName]§!"
+SHO_KHC: "Karmesinheim Commune"
