--- a/localisation/english/FX_Rhodesia_l_english.yml
+++ b/localisation/english/FX_Rhodesia_l_english.yml
@@ -11,13 +11,13 @@ RHO_social_liberal_DEF: "Rhodesia"
 RHO_market_liberal: "Rhodesia"
 RHO_market_liberal_ADJ: "Rhodesian"
 RHO_market_liberal_DEF: "Rhodesia"
-RHO_social_conservative: "Rhodesia"
+RHO_social_conservative: "Safeguard of Rhodesia"
 RHO_social_conservative_ADJ: "Rhodesian"
 RHO_social_conservative_DEF: "Rhodesia"
 RHO_authoritarian_democrat: "Rhodesia"
 RHO_authoritarian_democrat_ADJ: "Rhodesian"
 RHO_authoritarian_democrat_DEF: "Rhodesia"
-RHO_paternal_autocrat: "Rhodesia"
+RHO_paternal_autocrat: "Safeguard of Rhodesia"
 RHO_paternal_autocrat_ADJ: "Rhodesian"
 RHO_paternal_autocrat_DEF: "Rhodesia"
 RHO_valkist: "Rhodesia"
@@ -65,3 +65,33 @@ NGA_DEF: "The Nigerian State"
 NGA_social_conservative_party: "British Administration"
 RHO_social_conservative_party: "British Administration"
 KEN_social_conservative_party: "British Administration"
+
+### Initial Tree
+RHO_Elections_of_38: "Elections Of '38"
+RHO_Elections_of_38_desc: ""
+
+### Left
+RHO_Two_Words_In_Rhodesian: "Two Words In Rhodesian"
+RHO_Two_Words_In_Rhodesian_desc: ""
+RHO_They_Walked_In_The_Sand: "They Walked In The Sand"
+RHO_They_Walked_In_The_Sand_desc: ""
+RHO_A_Weathery_Storm: "A Weathery Storm"
+RHO_A_Weathery_Storm_desc: ""
+RHO_Lost_In_The_Wind: "Lost In The Wind"
+RHO_Lost_In_The_Wind_desc: ""
+RHO_Bear_Forth_The_Fruit: "Bear Forth The Fruit"
+RHO_Bear_Forth_The_Fruit_desc: ""
+RHO_The_English_Sun_Is_Setting: "The English Sun Is Setting"
+RHO_The_English_Sun_Is_Setting_desc: ""
+RHO_Africas_Breadbasket_Once_More: "Africas Breadbasket Once More"
+RHO_Africas_Breadbasket_Once_More_desc: ""
+RHO_Two_Countries_One_Cause: "Two Countries One Cause"
+RHO_Two_Countries_One_Cause_desc: ""
+RHO_What_A_Time_It_Was: "What A Time It Was"
+RHO_What_A_Time_It_Was_desc: ""
+
+### Right
+RHO_A_Party_of_Mediation: "A Party Of Mediation"
+RHO_A_Party_of_Mediation_desc: ""
+RHO_Africa_For_Africans: "Africa For Africans"
+RHO_Africa_For_Africans_desc: ""
